include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
int lsame_(const char *ca, const char *cb);
void xerbla_(const char *srname, const zynum_blas_int *info);
void xerbla_array_(const char *srname_array, const zynum_blas_int *srname_len, const zynum_blas_int *info);
float scabs1_(const zynum_blas_complex_float *z);
double dcabs1_(const zynum_blas_complex_double *z);
void sswap_(const zynum_blas_int *n, float *x, const zynum_blas_int *incx, float *y, const zynum_blas_int *incy);
void dswap_(const zynum_blas_int *n, double *x, const zynum_blas_int *incx, double *y, const zynum_blas_int *incy);
void cswap_(const zynum_blas_int *n, zynum_blas_complex_float *x, const zynum_blas_int *incx, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zswap_(const zynum_blas_int *n, zynum_blas_complex_double *x, const zynum_blas_int *incx, zynum_blas_complex_double *y, const zynum_blas_int *incy);
void scopy_(const zynum_blas_int *n, const float *x, const zynum_blas_int *incx, float *y, const zynum_blas_int *incy);
void dcopy_(const zynum_blas_int *n, const double *x, const zynum_blas_int *incx, double *y, const zynum_blas_int *incy);
void ccopy_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zcopy_(const zynum_blas_int *n, const zynum_blas_complex_double *x, const zynum_blas_int *incx, zynum_blas_complex_double *y, const zynum_blas_int *incy);
void saxpy_(const zynum_blas_int *n, const float *alpha, const float *x, const zynum_blas_int *incx, float *y, const zynum_blas_int *incy);
void daxpy_(const zynum_blas_int *n, const double *alpha, const double *x, const zynum_blas_int *incx, double *y, const zynum_blas_int *incy);
void caxpy_(const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zaxpy_(const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, zynum_blas_complex_double *y, const zynum_blas_int *incy);
void saxpby_(const zynum_blas_int *n, const float *alpha, const float *x, const zynum_blas_int *incx, const float *beta, float *y, const zynum_blas_int *incy);
void daxpby_(const zynum_blas_int *n, const double *alpha, const double *x, const zynum_blas_int *incx, const double *beta, double *y, const zynum_blas_int *incy);
void caxpby_(const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *beta, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zaxpby_(const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *beta, zynum_blas_complex_double *y, const zynum_blas_int *incy);
float sdot_(const zynum_blas_int *n, const float *x, const zynum_blas_int *incx, const float *y, const zynum_blas_int *incy);
double ddot_(const zynum_blas_int *n, const double *x, const zynum_blas_int *incx, const double *y, const zynum_blas_int *incy);
zynum_blas_complex_float cdotu_(const zynum_blas_int *n, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *y, const zynum_blas_int *incy);