include/zynum/blas/blas.f90

! Copyright (C) 2026 Zynum contributors
! SPDX-License-Identifier: LGPL-3.0-or-later
! Generated by tools/generate_compat_headers.zig.
! Project contact: Kaixiang Huang
! Fortran 2003+ ISO_C_BINDING module for the Zynum BLAS compatibility ABI.
module zynum_blas_fortran
  use, intrinsic :: iso_c_binding, only: &
      c_int, c_float, c_double, c_char, &
      c_float_complex, c_double_complex
  implicit none

  integer, parameter :: blasint = c_int
  integer, parameter :: blas_complex_float = c_float_complex
  integer, parameter :: blas_complex_double = c_double_complex

  ! Compatibility aliases for earlier Zynum BLAS module revisions.
  integer, parameter :: blas_int = blasint
  integer, parameter :: blas_complex_f32 = blas_complex_float
  integer, parameter :: blas_complex_f64 = blas_complex_double

  interface
    function lsame( &
        ca, cb &
    ) bind(C, name="lsame_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: ca
      character(kind=c_char), intent(in) :: cb
      integer(c_int) :: res
    end function lsame

    subroutine xerbla( &
        srname, info &
    ) bind(C, name="xerbla_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: srname
      integer(blasint), intent(in) :: info
    end subroutine xerbla

    subroutine xerbla_array( &
        srname_array, srname_len, info &
    ) bind(C, name="xerbla_array_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: srname_array(*)
      integer(blasint), intent(in) :: srname_len
      integer(blasint), intent(in) :: info
    end subroutine xerbla_array

    function scabs1( &
        z &
    ) bind(C, name="scabs1_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      complex(blas_complex_float), intent(in) :: z
      real(c_float) :: res
    end function scabs1

    function dcabs1( &
        z &
    ) bind(C, name="dcabs1_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      complex(blas_complex_double), intent(in) :: z
      real(c_double) :: res
    end function dcabs1

    subroutine sswap( &
        n, x, incx, y, incy &
    ) bind(C, name="sswap_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine sswap

    subroutine dswap( &
        n, x, incx, y, incy &
    ) bind(C, name="dswap_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine dswap

    subroutine cswap( &
        n, x, incx, y, incy &
    ) bind(C, name="cswap_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine cswap

    subroutine zswap( &
        n, x, incx, y, incy &
    ) bind(C, name="zswap_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zswap

    subroutine scopy( &
        n, x, incx, y, incy &
    ) bind(C, name="scopy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine scopy

    subroutine dcopy( &
        n, x, incx, y, incy &
    ) bind(C, name="dcopy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine dcopy

    subroutine ccopy( &
        n, x, incx, y, incy &
    ) bind(C, name="ccopy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine ccopy

    subroutine zcopy( &
        n, x, incx, y, incy &
    ) bind(C, name="zcopy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zcopy

    subroutine saxpy( &
        n, alpha, x, incx, y, incy &
    ) bind(C, name="saxpy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine saxpy

    subroutine daxpy( &
        n, alpha, x, incx, y, incy &
    ) bind(C, name="daxpy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine daxpy

    subroutine caxpy( &
        n, alpha, x, incx, y, incy &
    ) bind(C, name="caxpy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine caxpy

    subroutine zaxpy( &
        n, alpha, x, incx, y, incy &
    ) bind(C, name="zaxpy_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zaxpy

    subroutine saxpby( &
        n, alpha, x, incx, beta, y, &
        incy &
    ) bind(C, name="saxpby_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine saxpby

    subroutine daxpby( &
        n, alpha, x, incx, beta, y, &
        incy &
    ) bind(C, name="daxpby_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine daxpby

    subroutine caxpby( &
        n, alpha, x, incx, beta, y, &
        incy &
    ) bind(C, name="caxpby_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine caxpby

    subroutine zaxpby( &
        n, alpha, x, incx, beta, y, &
        incy &
    ) bind(C, name="zaxpby_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zaxpby

    function sdot( &
        n, x, incx, y, incy &
    ) bind(C, name="sdot_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_float) :: res
    end function sdot

    function ddot( &
        n, x, incx, y, incy &
    ) bind(C, name="ddot_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      real(c_double) :: res
    end function ddot

    function cdotu( &
        n, x, incx, y, incy &
    ) bind(C, name="cdotu_") result(res)
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: y(*)
      integer(blasint), intent(in) :: incy
      complex(blas_complex_float) :: res
    end function cdotu
